# ESP32-RFID_System

./: README.md  Server.js  esp32_dump.sql
IOTESP32/: IOTESP32.ino
public/: auth.html  chart.html  index.html  logs.html  records.html  stats.html  users.html
rust_test_web/: Cargo.toml  upload_test.html
rust_test_web/src/: api.rs  db.rs  main.rs
