[package]
name = "rustweb"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-files = "0.6"
chrono = { version = "0.4", features = ["serde"] }
actix-web-actors = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "mysql", "chrono", "time"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
dotenv = "0.15"
actix-cors = "0.7.1"


